# bezier

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  requirements.txt
include/: bezier.hpp
include/bezier/: bezier.hpp  curve.hpp  node.hpp  point.hpp
src/: bezier.cpp  curve.cpp  node.cpp  point.cpp
src/bezier/: bezier.cpp  curve.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
